Fix markdown and aside

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -129,7 +129,7 @@ categories:
 
 In information theory, the **data processing inequality (DPI)** is a powerful concept. Informally, it tells us that processing data cannot increase the amount of contained information. In this *two-part* blog post, we will explore the DPI and its applications to **function-space variational inference (FSVI)**.
 
-<aside class="box-warning" markdown>
+<aside class="l-body box-warning" markdown="1">
 The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $X \rightarrow Y \rightarrow Z$ and their mutual information. We will also look at different data processing inequalities that relate different distributions instead of different random variables.
 </aside>
 
@@ -181,11 +181,9 @@ $$
 </div>
 {% endraw %}
 
-## Background: Information-Theoretic Notation
+## Background
 <details markdown="1">
-<summary markdown="1"><span>Details</span>
-<div>
-This blog post uses the same background as the previous blog post ["Bayesian Appropriation: General Likelihood for Loss Functions"](https://blog.blackhc.net/2023/06/general_likelihood/), so you can skip it if you have read the previous blog posts.</div></summary>
+<summary>Information-Theoretic Notation</summary>
 
 Information theory deals with the communication of information. In this blog post, we use information-theoretic notation to express various quantities related to probability distributions and their relationships. Here are some key concepts we will use:
 
@@ -301,7 +299,7 @@ $$\Hof{X \given Y} = \underbrace{\MIof{X ; Z \given Y}}_{\overset{(1)}{=}0} + \H
 
 The equality gap $\Hof{X \given Y, Z} - \Hof{X \given Z}$ corresponds to the mutual information $\MIof{X ; Y \given Z}$. This mutual information measures the extra information about $X$ contained in $Y$ that is not already conveyed by $Z$. It is zero if and only if $X \rightarrow Z \rightarrow Y$ forms a Markov chain, indicating that $Z$ is a sufficient statistic for $X$.
 
-<details markdown>
+<details markdown="1">
 <summary>Proof of **(2)** "Conditioning Reduces Entropy":</summary>
 We can easily show that conditioning reduces entropy by using the non-negative property of the mutual information:
 $$\begin{aligned}
@@ -369,7 +367,7 @@ $$
 
 This counterexample highlights the importance of precisely understanding the assumptions underlying conceptual principles like the DPI. While the DPI provides insight about information dynamics in many cases, it does not universally apply, as exemplified here by Bayesian updating under different priors.
 
-<aside class="box-note">
+<aside class="l-body box-note">
 Identifying counterexamples sharpens our comprehension of the true meanings and limitations of information-theoretic inequalities.
 </aside>
 
@@ -398,7 +396,7 @@ This makes it difficult to extract the case for equality, however.
 
 #### Equality Case
 
-<aside class="box-note" markdown>
+<aside class="l-body box-note" markdown="1">
 We have equality in Jensen's inequality $\E{\pof{x}}{g(x)} \le g(\E{\pof{x}}{x})$ when $g$ is affine (commutes with addition) where $\pof{x}$ has support. A special case is when $g(x)$ is constant almost everywhere in the support of $\pof{x}$.
 </aside>
 
@@ -431,7 +429,7 @@ As an example, at the simplest, if this is the case for all $y$, then $C_y = 1$ 
 
 Thomas and Cover provide a beautifully simple proof:
 
-<aside class="box-note" markdown>
+<aside class="l-body box-note" markdown="1">
 Using the chain rule of the 🥬 divergence:
 $$
 \Kale{\pof{X, Y}}{\qof{X, Y}} = \Kale{\pof{X}}{\qof{X}} + \Kale{\pof{Y \given X}}{\qof{Y \given X}},
@@ -471,7 +469,7 @@ Compared to the previous equality case we went a bit deeper and rewrote the cond
 
 Altogether, we have see that both $x$ and $y$ are modulated by the same constant factor between $\pof{\cdot}$ and $\qof{\cdot}$. Essentially, this tells us that we could split our support into unconnected sub-domains and examine each individually for the equality case.
 
-<aside class="box-note" markdown>
+<aside class="l-body box-note" markdown="1">
 One technicality is the question of what $\pof{y \given x}$ is when $\pof{x} = 0$. We could define it to be anything we want, but really it is undefined. 
 
 Previously, we said that we want $\pof{y \given x} = \fof{y \given x}$ and $\qof{y \given x} = \fof{y \given x}$, but, given the above, we only need these equalities to hold where $\pof{x} \not= 0$ and $\qof{x} \not= 0$, respectively.
@@ -482,7 +480,7 @@ On the other hand, $\pof{x} = 0$ does imply $\pof{x \given y} = 0$.
 ### Overall Statement 
 We have the following overall statement:
 
-<aside markdown class="box-warning">
+<aside class="l-body box-warning" markdown="1">
 Given $\pof{x}$ and $\qof{x}$ and shared transition function $\fof{y \given x}$ for the model $X \rightarrow Y$, the relative 🥬 data processing inequality is:
 $$
 \Kale{\pof{X}}{\qof{X}} \ge \Kale{\pof{Y}}{\qof{Y}},
@@ -517,7 +515,7 @@ The square root of the Jensen-Shannon divergence is symmetric and satisfies the 
 
 We can also obtain a data processing inequality for the Jensen-Shannon divergence and the Jensen-Shannon distance:
 
-<aside markdown class="box-warning">
+<aside class="l-body box-warning" markdown="1">
 Given $\pof{x}$ and $\qof{x}$ and shared transition function $\fof{y \given x}$ for the model $X \rightarrow Y$, the Jensen-Shannon divergence data processing inequality is:
 $$
 \JSD{\pof{X}}{\qof{X}} \ge \JSD{\pof{Y}}{\qof{Y}}.
