--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -278,9 +278,11 @@ Intuitively, autoencoders try to preserve as much mutual information between inp
 The proof is simple and connects the DPI to another important inequality.
 
 First we note that the Markov Chain implies that the following factorization of the joint distribution:
+
 $$
 \pof{x, y, z} = \pof{x} \pof{y \given x} \pof{z \given y}.
 $$
+
 Using this factorization, we can express the mutual information terms:
 
 $$
@@ -294,7 +296,11 @@ $$
 This relies on $\Hof{X \given Y} \le \Hof{X \given Z}$. Why is this true?
 
 We have the following chain of inequalities:
-$$\Hof{X \given Y} = \underbrace{\MIof{X ; Z \given Y}}_{\overset{(1)}{=}0} + \Hof{X \given Y, Z} \overset{(2)}{\le} \Hof{X \given Z}.$$
+
+$$
+\Hof{X \given Y} = \underbrace{\MIof{X ; Z \given Y}}_{\overset{(1)}{=}0} + \Hof{X \given Y, Z} \overset{(2)}{\le} \Hof{X \given Z}.
+$$
+
 **(1)** follows from the Markov chain property: when $X \rightarrow Y \rightarrow Z$, $X$ does not depend on $Z$ at all when conditioned on $Y$; and **(2)** follows from the fact that conditioning reduces entropy, i.e. $\Hof{A \given B} \le \Hof{A}.$
 
 The equality gap $\Hof{X \given Y, Z} - \Hof{X \given Z}$ corresponds to the mutual information $\MIof{X ; Y \given Z}$. This mutual information measures the extra information about $X$ contained in $Y$ that is not already conveyed by $Z$. It is zero if and only if $X \rightarrow Z \rightarrow Y$ forms a Markov chain, indicating that $Z$ is a sufficient statistic for $X$.
@@ -302,7 +308,9 @@ The equality gap $\Hof{X \given Y, Z} - \Hof{X \given Z}$ corresponds to the mut
 <details markdown="1">
 <summary>Proof of **(2)** "Conditioning Reduces Entropy":</summary>
 We can easily show that conditioning reduces entropy by using the non-negative property of the mutual information:
-$$\begin{aligned}
+
+$$
+\begin{aligned}
 0 &\le \Kale{\pof{X,Y}}{\pof{X}\pof{Y}}  \\
 &= \MIof{X;Y} \\
 &= \Hof{X} - \Hof{X \given Y} \\
@@ -321,10 +329,13 @@ A similar DPI can be expressed for different distributions $\pof{x}$ and $\qof{x
 It states that if we evolve two distributions using the same transition function, they cannot become less similar. The KL divergence (🥬) is sometimes also referred to as "relative entropy", so we could also  call this the "*relative data processing inequality*".
 
 This can be formalized for distributions $\pof{x}$ and $\qof{x}$ and a stochastic transition function $X \overset{\fof{y \given x}}{\longrightarrow} Y$:
+
 $$
 \Kale{\pof{X}}{\qof{X}} \ge \Kale{\pof{Y}}{\qof{Y}},
 $$
+
 where $\pof{y \given x} = \fof{y \given x} = \qof{y \given x}$. The marginals after the transition are $\pof{y} = \E{\pof{x}}{\fof{y \given x}}$ and $\qof{y} = \E{\qof{x}}{\fof{y \given x}}$, so more explicitly:
+
 $$
 \Kale{\pof{X}}{\qof{X}} \ge \Kale{\E{\pof{x}}{\fof{Y \given x}}}{\E{\qof{x}}{\fof{Y \given x}}}.
 $$
@@ -380,7 +391,9 @@ We will prove this inequality in two different ways. First, we will develop a "b
 If $\opp$ does not have support in $\opq$, the inequality is trivially true because then $\Kale{\pof{Y}}{\qof{Y}}=\infty$.
 
 Thus, now assume that $\opp$ has support in $\opq$. Then, we can brute-force from the cross-entropy:
-$$\begin{aligned}
+
+$$
+\begin{aligned}
 \CrossEntropy{\pof{Y}}{\qof{Y}}&=\CrossEntropy{\pof{Y}}{\E{\qof{x}}{\pof{Y \given x}}}\\
 &=\CrossEntropy{\pof{Y}}{\E{\qof{x}}{\frac{\pof{x \given Y}\pof{Y}}{\pof{x}}}}\\
 &=\CrossEntropy{\pof{Y}}{\E{\pof{x \given Y}}{\frac{\qof{x}}{\pof{x}}}}+\CrossEntropy{\pof{Y}}{\pof{Y}}\\
@@ -389,7 +402,9 @@ $$\begin{aligned}
 &\overset{(3)}{=}\CrossEntropy{\pof{X}}{\frac{\qof{X}}{\pof{X}}}+\xHof{\pof{Y}}\\
 &\overset{(4)}{=}\Kale{\pof{X}}{\qof{X}}+\xHof{\pof{Y}}\\
 \iff \Kale{\pof{Y}}{\qof{Y}}&\le\Kale{\pof{X}}{\qof{X}},
-\end{aligned}$$
+\end{aligned}
+$$
+
 where we have used **(1)** the cross-entropy of a distribution with itself is just the entropy, **(2)** the cross-entropy is convex and we can apply Jensen's inequality, **(3)** the RHS side of the cross-entropy does not depend on $Y$ and we can trivially marginalize it out, and **(4)** the definition of the Kullback-Leibler divergence as (unnormalized) cross-entropy of a fraction.
 
 This makes it difficult to extract the case for equality, however.
@@ -402,21 +417,25 @@ We have equality in Jensen's inequality $\E{\pof{x}}{g(x)} \le g(\E{\pof{x}}{x})
 
 For **(2)**, this is sadly slightly more complex than it might seem on first glance. 
 Let's unwrap the term:
+
 $$
 \CrossEntropy{\pof{Y}}{\E{\pof{x \given Y}}{\frac{\qof{x}}{\pof{x}}}} = \E{\pof{y}}{-\log \E{\pof{x \given y}}{\frac{\qof{x}}{\pof{x}}}}.
 $$
+
 We take an expectation over $\pof{y}$, so we need to look at almost all $\pof{x \given y} \not= 0$ for different almost all $\pof{y}$ separately to consider equality.
 $-\log x$ is strictly convex, so we need $F = \frac{\qof{X}}{\pof{X}}$ to be constant almost everywhere in the support of $\pof{x \given y}$ for any fixed $y$. Then we have equality in Jensen's inequality.
 
 In the following, I will limit myself to the discrete case to avoid having to deal with measure theory[^measuretheory].
 To obtain equality, for all $y$ with $\pof{y} \not= 0$ (i.e. we have support) and for all $x_1, x_2$ with $\pof{x_1 \given y}, \pof{x_2 \given y} \not= 0$, we need $\frac{\qof{x_1}}{\pof{x_1}} = \frac{\qof{x_2}}{\pof{x_2}}$. 
 Equivalently (for the reader, why is then $\pof{x_1} \not= 0?$):
+
 $$
 \begin{aligned}
 \frac{\qof{x_1}}{\pof{x_1}} &= \frac{\qof{x_2}}{\pof{x_2}} \\
 \iff \qof{x_1} &= \frac{\qof{x_2}}{\pof{x_2}} \, \pof{x_1} \\
 \end{aligned}
 $$
+
 This means that $\qof{x} = C_y \pof{x}$ piecewise for all $x$ for which $\pof{x \given y} \not= 0$ for some fixed $y$ with $\pof{y} \not= 0$. That is if we keep $y$ fixed, all the $x$ for which $\pof{x \given y} \not= 0$ have the same constant factor $C_y$. Then for all $y$ with $\pof{y} \not= 0$, we have equality and overall equality in **(2)**.
 
 [^measuretheory]: I currently don't have a good 'toolbox' to express simple ideas cleanly in measure theory. I'm working on it.
@@ -431,10 +450,13 @@ Thomas and Cover provide a beautifully simple proof:
 
 <aside class="l-body box-note" markdown="1">
 Using the chain rule of the 🥬 divergence:
+
 $$
 \Kale{\pof{X, Y}}{\qof{X, Y}} = \Kale{\pof{X}}{\qof{X}} + \Kale{\pof{Y \given X}}{\qof{Y \given X}},
 $$
+
 and its symmetry, we have:
+
 $$
 \begin{aligned}
 &\Kale{\pof{X}}{\qof{X}} + \underbrace{\Kale{\pof{Y\given X}}{\qof{Y \given X}}}_{=\Kale{\fof{Y\given X}}{\fof{Y \given X}}=0}\\
@@ -443,6 +465,7 @@ $$
 &\quad \ge \Kale{\pof{Y}}{\qof{Y}}.
 \end{aligned}
 $$
+
 We have equality exactly when $\pof{x \given y} = \qof{x \given y}$ for (almost) all $x, y.$
 </aside>
 
@@ -453,6 +476,7 @@ The statement on equality is not very informative yet though, so we have to put 
 This time we explicitly use Bayes' rule to connect the forward and backward transition functions.
 First, we have to fix $y$ such that $\pof{y} \not= 0$ (i.e. $y$ is in the support of $\pof{y}$) and then $\qof{y} \not=0$.
 We have:
+
 $$
 \begin{aligned}
 \pof{x \given y} &= \qof{x \given y} \\
@@ -461,6 +485,7 @@ $$
 \iff \pof{x} &= \frac{\pof{y}}{\qof{y}} \, \qof{x}.
 \end{aligned}
 $$
+
 For a given $y$ with $\pof{y} \not=0$, for the equality case, we see that for all $x$ with $\fof{y \given x} \not= 0$, $\pof{x}$ and $\qof{x}$ have to be coupled via piecewise constant factors. 
 
 As another example, if $\fof{y \given x} \not=0$ (has full support) for all possible $x$, for the equality case we have $\pof{x} = \qof{x}$.
@@ -482,15 +507,20 @@ We have the following overall statement:
 
 <aside class="l-body box-warning" markdown="1">
 Given $\pof{x}$ and $\qof{x}$ and shared transition function $\fof{y \given x}$ for the model $X \rightarrow Y$, the relative 🥬 data processing inequality is:
+
 $$
 \Kale{\pof{X}}{\qof{X}} \ge \Kale{\pof{Y}}{\qof{Y}},
 $$
+
 When $\pof{x} \ll \qof{x}$, we have equality when $\pof{X \given Y} = \qof{X \given Y}$.
 </aside>
 ($\pof{x} \ll \qof{x}$ means that $\qof{x} > 0$ implies $\pof{x} > 0$, so the 🥬 divergence is not $\infty$.)
 
 More precisely, for $\pof{x} \ll \qof{x}$, we have equality when:
-$$\forall y, \pof{y} \not= 0 \exists C_y \in \mathbb{R}_{> 0} \forall x, \fof{y \given x}\not=0\colon \pof{x} = C_y \, \qof{x}.$$
+
+$$
+\forall y, \pof{y} \not= 0 \exists C_y \in \mathbb{R}_{> 0} \forall x, \fof{y \given x}\not=0\colon \pof{x} = C_y \, \qof{x}.
+$$
 
 ## Revisiting Data Processing Inequalities
 
@@ -501,12 +531,14 @@ Now, we can use this to derive a few additional results and also to close the ci
 The KL (🥬) divergence is not a metric. The triangle inequality does not hold, and it is not symmetric.
 
 We can symmetrize it to obtain the [Jensen-Shannon divergence (JSD)](https://en.wikipedia.org/wiki/Jensen%E2%80%93Shannon_divergence). The JSD is defined as the mean of the two 🥬 divergences of the two distributions from their average. It essentially makes the 🥬 divergence symmetric:
+
 $$
 \begin{aligned}
 \fof{x} &= \frac{\pof{x} + \qof{x}}{2}\\
 \JSD{\pof{x}}{\qof{x}} &= \frac{1}{2} \Kale{\pof{x}}{\fof{x}} + \frac{1}{2} \Kale{\qof{x}}{\fof{x}}.
 \end{aligned}
 $$
+
 Similar approaches can be used to "symmetrize" other concepts; for example matrices: $\frac{1}{2} A + \frac{1}{2} A^T$ is also symmetric by construction for any matrix $A$.
 
 The square root of the Jensen-Shannon divergence is symmetric and satisfies the triangle inequality---it is a metric: the *Jensen-Shannon distance*.
@@ -517,13 +549,16 @@ We can also obtain a data processing inequality for the Jensen-Shannon divergenc
 
 <aside class="l-body box-warning" markdown="1">
 Given $\pof{x}$ and $\qof{x}$ and shared transition function $\fof{y \given x}$ for the model $X \rightarrow Y$, the Jensen-Shannon divergence data processing inequality is:
+
 $$
 \JSD{\pof{X}}{\qof{X}} \ge \JSD{\pof{Y}}{\qof{Y}}.
 $$
+
 We have equality exactly when $\pof{x \given y} = \qof{x \given y}$ almost everywhere.
 </aside>
 
 The proof uses the 🥬 data processing inequality:
+
 $$
 \begin{aligned}
 \JSD{\pof{X}}{\qof{X}} &= \frac{1}{2} \Kale{\pof{X}}{\fof{X}} + \frac{1}{2} \Kale{\qof{X}}{\fof{X}}\\
@@ -531,7 +566,9 @@ $$
 &= \JSD{\pof{Y}}{\qof{Y}}.
 \end{aligned}
 $$
+
 We verify $\fof{y} = \frac{\pof{y} + \qof{y}}{2}$ is the average of $\pof{y}$ and $\qof{y}$:
+
 $$
 \begin{aligned}
 \fof{y} &= \E{\fof{x}}{\fof{y \given x}}\\
@@ -540,7 +577,9 @@ $$
 &= \frac{1}{2} \pof{y} + \frac{1}{2} \qof{y}.
 \end{aligned}
 $$
+
 Finally, $\pof{x}, \qof{x} \ll \fof{x}$, and the equality condition of the 🥬 data processing inequality gives us:
+
 $$
 \begin{aligned}
 &\Kale{\pof{X \given Y}}{\fof{X \given Y}} = 0 &\\
@@ -552,18 +591,23 @@ $$
 
 ### Mutual Information
 
-The JSD can also be expressed as a mutual information. For $$
+The JSD can also be expressed as a mutual information. For 
+$$
 \begin{aligned}
 Z &\sim \mathrm{Bernoulli}(\frac{1}{2}) = \fof{Z} \\
 X \given Z = 0 &\sim \pof{x}\\
 X \given Z = 1 &\sim \qof{x},
 \end{aligned}
 $$
+
 we have:
+
 $$
 \JSD{\pof{X}}{\qof{X}} = \MIof{X;Z}.
 $$
+
 This follows from rewriting the mutual information as a 🥬 divergence:
+
 $$
 \begin{aligned}
 \MIof{X;Z} &= \Kale{\fof{X \given Z}}{\fof{X}}\\
@@ -574,6 +618,7 @@ $$
 $$
 
 We can generalize this to the Markov chain $Z \rightarrow X \rightarrow Y$ with $\fof{z, x, y} = \fof{z} \fof{x \given z} \fof{y \given x}$ for any distribution $\fof{z}$:
+
 $$
 \begin{aligned}
 \MIof{X;Z} &= \Kale{\fof{X \given Z}}{\fof{X}}\\
@@ -583,17 +628,20 @@ $$
 &= \MIof{Y;Z},
 \end{aligned}
 $$
+
 where $(1)$ follows from the 🥬 data processing inequality.
 
 This is just the data processing inequality we presented initially.
 
 The equality gap (*Jensen gap*) is $\Kale{\fof{X \given Y, Z}}{\fof{X \given Y}}$. We have equality when:
+
 $$
 \begin{aligned}
 \Kale{\fof{X \given Y, Z}}{\fof{X \given Y}} &= 0\\
 \implies \MIof{X;Z \given Y} &= 0.
 \end{aligned}
 $$
+
 This is exactly when $X$ is independent of $Z$ given $Y$. (Then $Y$ is a sufficient statistic.)
 
 **Summary.** We have shown that we can derive the data processing inequality using the 🥬 data processing inequality.
